--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -4,14 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CeneoScraper"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Import bibliotek"
+    "# Ceneo Scraper\n",
+    "**Struktura opinii w serwisie ceneo.pl:**\n",
+    "|Składowa|Selektor|Zmienna|\n",
+    "|--------|--------|--------|\n",
+    "|*identyfikator opinii*|[\"data-entry-id\"]|`opinion_id`|\n",
+    "|*autora*|span.user-post__author-name|`author`|\n",
+    "|*rekomendację*|span.user-post__author-recomendation > em|`recommend`|\n",
+    "|*liczbę gwiazdek*|span.user-post__score-count|`stars`|\n",
+    "|*treść opinii*|div.user-post__text|`content`|\n",
+    "|*listę wad*|div.review-feature__title review-feature__title--negatives ~ div.review-feature__item|`cons`|\n",
+    "|*listę zalet*|div.review-feature__title review-feature__title--positives ~ div.review-feature__item|`pros`|\n",
+    "|*data wystawienia opinii*|span.user-post__published > time:nth-child(1)[\"datetime\"]|`opinion_date`|\n",
+    "|*data zakupu produktu*|span.user-post__published > time:nth-child(2)[\"datetime\"]|`purchase_date`|\n",
+    "|*ile osób uznało opinię za przydatną*|button.vote-yes[\"data-total-vote\"]|`upvote`|\n",
+    "|*ile osób uznało opinię za nieprzydatną*|button.vote-no[\"data-total-vote\"]|`downvote`|\n",
+    "\n",
+    "### 1. Import bibliotek"
    ]
   },
   {
@@ -28,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Wczytanie kodu produktu o którym pobierzemy opinie\n"
+    "### 2. Wczytanie kodu produktu o którym pobierzemy opinie\n"
    ]
   },
   {
@@ -45,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Wysłanie do serwera Ceneo.pl żądania dostępu do strony z opiniami o produkcie"
+    "### 3. Wysłanie do serwera Ceneo.pl żądania dostępu do strony z opiniami o produkcie"
    ]
   },
   {
@@ -59,6 +68,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Etap IV\n",
+    "- Przekształcenie kodu HTML w postaci tekstowej do obiektu reprezentującego strukturę DOM\n",
+    "- Wydobycie ze struktury DOM znaczników odpowiadających opiniom  konsumentów"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -67,9 +85,64 @@
     "page = BeautifulSoup(response.text, \"html.parser\")\n",
     "opinions = page.select(\"div.js_product-review\")\n",
     "opinion = page.select_one(\"div.js_product-review\")\n",
-    "print(type(page))\n",
-    "print(type(opinions))\n",
-    "print(type(opinion))"
+    "print(opinions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Etap V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract(ancestor, selector=None, attribute=None, return_list=False):\n",
+    "    if return_list:\n",
+    "        if attribute:\n",
+    "            return [tag[attribute].strip() for tag in ancestor.select(selector)]\n",
+    "        return [tag.text.strip() for tag in ancestor.select(selector)]\n",
+    "    if selector:\n",
+    "        if attribute:\n",
+    "            return ancestor.select_one(selector)[attribute].strip()\n",
+    "        return ancestor.select_one(selector).text.strip()\n",
+    "    if attribute:\n",
+    "        return ancestor[attribute].strip()\n",
+    "    return ancestor.text.strip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Etap VI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "single_opinion = {\n",
+    "    'opinion_id': extract(opinion, None, \"data-entry-id\"),\n",
+    "    \"author\" : extract(opinion, \"span.user-post__author-name\"),\n",
+    "    \"recommend\" : extract(opinion, \"span.user-post__author-recomendation > em\"),\n",
+    "    \"stars\" : extract(opinion, \"span.user-post__score-count\"),\n",
+    "    \"opinion_date\" : extract(opinion,(\"span.user-post__published > time:nth-child(1)\"),\"datetime\"),\n",
+    "    \"purchased_date\" : extract(opinion,(\"span.user-post__published > time:nth-child(2)\"),\"datetime\"),\n",
+    "    'content': extract(opinion, \"div.user-post__text\"),\n",
+    "    'cons': extract(opinion, \"div.review-feature__title--negatives ~ div.review-feature__item\", None, True),\n",
+    "    'pros': extract(opinion, \"div.review-feature__title--positives ~ div.review-feature__item\", None, True),\n",
+    "    'upvote': extract(opinion, \"button.vote-yes\", \"data-total-vote\"),\n",
+    "    'downvote': extract(opinion, \"button.vote-no\", \"data-total-vote\")\n",
+    "}\n",
+    "\n",
+    "print(single_opinion)"
    ]
   }
  ],
@@ -89,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
